[package]
name = "opfs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/anchpop/opfs.git"
license = "MIT"
authors = ["Andre Popovitch <andre@popovit.ch>"]
description = "A Rust implementation of the Origin Private File System browser API."

[features]
unstable_apis = []

[dependencies]
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "File",
    "Blob",
    "Navigator",
    "Storage",
    "StorageManager",
    "Window",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemCreateWritableOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemRemoveOptions",
    "WriteParams",
    "WriteCommandType",
    "FileSystemSyncAccessHandle",
    "FileSystemSyncAccessHandleOptions",
    "FileSystemReadWriteOptions",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.52", features = [
    "fs",
    "io-util",
    "sync",
    "macros",
    "rt",
    "rt-multi-thread",
] }
dirs = "6"
tempfile = "3.27"

[dev-dependencies]
wasm-bindgen-test = "0.3"
